fix: Headerのz-indexを上に変更

--- a/endo-koubou/src/app/components/organisms/Header/header.module.scss
+++ b/endo-koubou/src/app/components/organisms/Header/header.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   background: #ffffffb3;
   padding: var(--space-3) 0;
-  z-index: var(--z-index-1);
+  z-index: var(--z-index-4);
   transition: transform 0.4s ease-in-out;
   &.slideDown {
     transform: translateY(0);
